--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="utf-8">
 	<title>mikewesthad</title>
@@ -14,30 +13,31 @@
 		</h1>			
 		<nav class="nav primary-nav">
 			<ul>
-				<li><a href="index.html">Projects</a></li><!--
-				--><li><a href="index.html">Teaching</a></li><!--
-				--><li><a href="index.html">Blog</a></li><!--
-				--><li><a href="index.html">Me</a></li>
+				<li><a href="projects.html">Projects</a></li><!--
+				--><li><a href="teaching.html">Teaching</a></li><!--
+				--><li><a href ="blog.html">Blog</a></li><!--
+				--><li><a href="me.html">Me</a></li>
 			</ul>
 		</nav>
 	</header>
 
 	<section class="row">
-		<div class="container">
-			<p>Under Construction</p>
+		<div class="container body">
+			<p>Oh hello, i am under construction</p>
 		</div>
 	</section>
 
 	<footer class="primary-footer container group">
-	 	<small>&copy; Michael Hadley</small>
-		<nav class="nav">
+	 	<small class="copywrite">&copy; Michael Hadley</small>
+
+		<section class="social-media">
 			<ul>
-				<li><a href="index.html">Projects</a></li><!--
-				--><li><a href="index.html">Teaching</a></li><!--
-				--><li><a href="index.html">Blog</a></li><!--
-				--><li><a href="index.html">Me</a></li>
+				<li><small>email:</small> <a href="mailto:mikewesthad@gmail.com">mikewesthad[at]gmail</a></li><!-- 
+				--><li><small>twitter:</small> <a href="https://twitter.com/mikewesthad">@mikewesthad</a></li><!--
+				--><li><small>github:</small> <a href="https://github.com/mikewesthad">mikewesthad</a></li><!--
+				--><li><small>linkedin:</small> <a href="www.linkedin.com/in/michaelwesthadley">michael hadley </a></li>
 			</ul>
-		</nav>
+		</section>
 	</footer>
 </body>
 
