--- a/me.html
+++ b/me.html
@@ -29,8 +29,8 @@
 	</section>
 
 	<footer class="primary-footer container group">
-	 	<small>&copy; Michael Hadley</small>
-
+	 	<small class="copywrite">&copy; Michael Hadley</small>
+	 	
 		<section class="social-media">
 			<ul>
 				<li>email: <a href="mailto:mikewesthad@gmail.com">mikewesthad[at]gmail</a></li><!-- 
