--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
 	</section>
 
 	<footer class="primary-footer container group">
-	 	<small>&copy; Michael Hadley</small>
+	 	<small class="copywrite">&copy; Michael Hadley</small>
 
 		<section class="social-media">
 			<ul>
