Small footer format change.  Also, joke. I should delete that.

--- a/blog.html
+++ b/blog.html
@@ -24,19 +24,18 @@
 
 	<section class="row">
 		<div class="container body">
-			<p>Blarg</p>
+			<p>Blarg.</p>
 		</div>
 	</section>
 
 	<footer class="primary-footer container group">
 	 	<small class="copywrite">&copy; Michael Hadley</small>
-
 		<section class="social-media">
 			<ul>
-				<li>email: <a href="mailto:mikewesthad@gmail.com">mikewesthad[at]gmail</a></li><!-- 
-				--><li>twitter: <a href="https://twitter.com/mikewesthad">@mikewesthad</a></li><!--
-				--><li>github: <a href="https://github.com/mikewesthad">mikewesthad</a></li><!--
-				--><li>linkedin: <a href="www.linkedin.com/in/michaelwesthadley">michael hadley </a></li>
+				<li><small>email:</small> <a href="mailto:mikewesthad@gmail.com">mikewesthad[at]gmail</a></li><!-- 
+				--><li><small>twitter:</small> <a href="https://twitter.com/mikewesthad">@mikewesthad</a></li><!--
+				--><li><small>github:</small> <a href="https://github.com/mikewesthad">mikewesthad</a></li><!--
+				--><li><small>linkedin:</small> <a href="www.linkedin.com/in/michaelwesthadley">michael hadley </a></li>
 			</ul>
 		</section>
 	</footer>
