--- a/index.html
+++ b/index.html
@@ -23,13 +23,12 @@
 
 	<section class="row">
 		<div class="container body">
-			<p>Oh hello, i am under construction</p>
+			<p>Oh hello, i am under construction.</p>
 		</div>
 	</section>
 
 	<footer class="primary-footer container group">
 	 	<small class="copywrite">&copy; Michael Hadley</small>
-
 		<section class="social-media">
 			<ul>
 				<li><small>email:</small> <a href="mailto:mikewesthad@gmail.com">mikewesthad[at]gmail</a></li><!-- 
