Started adding in images to the 960 fixed width layout

--- a/blog.html
+++ b/blog.html
@@ -22,9 +22,15 @@
 		</nav>
 	</header>
 
-	<section class="row">
-		<div class="container body">
-			<p>Blarg.</p>
+	<section class="container body">
+		<div class="single-column">
+				<a href="#">
+					<figure>
+						<img src="./assets/images/blog/Blarg.png">
+						<figcaption>Old Blarg</figcaption>
+					</figure>
+				</a>
+			</div>
 		</div>
 	</section>
 
