--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
 		</nav>
 	</header>
 
-	<section class="row">
-		<div class="container body">
-			<p>Oh hello, i am under construction.</p>
-		</div>
+	<section class="container body">
+			<p>Oh hai, I'm underconstruction.</p>
 	</section>
 
 	<footer class="primary-footer container group">
