--- a/me.html
+++ b/me.html
@@ -22,9 +22,14 @@
 		</nav>
 	</header>
 
-	<section class="row">
-		<div class="container body">
-			<img height=396 src="http://s3-ec.buzzfed.com/static/enhanced/web03/2011/10/20/15/enhanced-buzz-25017-1319140748-3.jpg">
+	<section class="container body">
+		<div class="single-column">
+				<a href="#">
+					<figure>
+						<img src="http://s3-ec.buzzfed.com/static/enhanced/web03/2011/10/20/15/enhanced-buzz-25017-1319140748-3.jpg">
+					</figure>
+				</a>
+			</div>
 		</div>
 	</section>
 
