--- a/projects.html
+++ b/projects.html
@@ -22,9 +22,56 @@
 		</nav>
 	</header>
 
-	<section class="row">
-		<div class="container body">
-			<p>projects, right here please.</p>
+	<section class="container body">
+		<div class="img-grid">
+			<div class="img-grid-elem">
+				<a href="#">
+					<figure>
+						<img src="./assets/images/test1.png">
+						<figcaption>Movie Paint (2013)</figcaption>
+					</figure>
+				</a>
+			</div><!--
+			--><div class="img-grid-elem">
+				<a href="#">
+					<figure>
+						<img src="./assets/images/test2.png">
+						<figcaption>Flood (2013)</figcaption>
+					</figure>
+				</a>
+			</div><!--
+			--><div class="img-grid-elem">
+				<a href="#">
+					<figure>
+						<img src="./assets/images/test3.png">
+						<figcaption>Mountain (2013)</figcaption>
+					</figure>
+				</a>
+			</div><!--
+			--><div class="img-grid-elem">
+				<a href="#">
+					<figure>
+						<img src="./assets/images/test4.png">
+						<figcaption>Escher (2013)</figcaption>
+					</figure>
+				</a>
+			</div><!--
+			--><div class="img-grid-elem">
+				<a href="#">
+					<figure>
+						<img src="./assets/images/test5.png">
+						<figcaption>Neurite (2012)</figcaption>
+					</figure>
+				</a>
+			</div><!--
+			--><div class="img-grid-elem">
+				<a href="#">
+					<figure>
+						<img src="./assets/images/test6.png">
+						<figcaption>Google (2014)</figcaption>
+					</figure>
+				</a>
+			</div>
 		</div>
 	</section>
 
