--- a/teaching.html
+++ b/teaching.html
@@ -22,9 +22,32 @@
 		</nav>
 	</header>
 
-	<section class="row">
-		<div class="container body">
-			<p>Teaching stuffs go here.</p>
+	<section class="container body">
+		<div class="img-grid">
+			<div class="img-grid-elem">
+				<a href="#">
+					<figure>
+						<img src="./assets/images/teaching/GameDesign_Test.png">
+						<figcaption>Game Design (2013)</figcaption>
+					</figure>
+				</a>
+			</div><!--
+			--><div class="img-grid-elem">
+				<a href="#">
+					<figure>
+						<img src="./assets/images/teaching/MeshTutorial_Test.png">
+						<figcaption>Generative Meshes (2013)</figcaption>
+					</figure>
+				</a>
+			</div><!--
+			--><div class="img-grid-elem">
+				<a href="#">
+					<figure>
+						<img src="./assets/images/teaching/ofBook_Test.png">
+						<figcaption>Introduction to Graphics (2013)</figcaption>
+					</figure>
+				</a>
+			</div>
 		</div>
 	</section>
 
