--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,16 @@
 	<title>mikewesthad</title>
 	<link rel="stylesheet" href="assets/stylesheets/main.css">
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-51816945-1', 'mikewesthad.com');
+		ga('send', 'pageview');
+	</script>
+</head>
 
 <body>
 	<header class="primary-header container group">		
@@ -28,7 +38,7 @@
 				<a href="#">
 					<figure>
 						<img src="./assets/images/test1.png">
-						<figcaption>Movie Paint (2013)</figcaption>
+						<figcaption>test (2013)</figcaption>
 					</figure>
 				</a>
 			</div><!--
@@ -36,7 +46,7 @@
 				<a href="#">
 					<figure>
 						<img src="./assets/images/test2.png">
-						<figcaption>Flood (2013)</figcaption>
+						<figcaption>test (2013)</figcaption>
 					</figure>
 				</a>
 			</div><!--
@@ -44,7 +54,7 @@
 				<a href="#">
 					<figure>
 						<img src="./assets/images/test3.png">
-						<figcaption>Mountain (2013)</figcaption>
+						<figcaption>test (2013)</figcaption>
 					</figure>
 				</a>
 			</div><!--
@@ -52,7 +62,7 @@
 				<a href="#">
 					<figure>
 						<img src="./assets/images/test4.png">
-						<figcaption>Escher (2013)</figcaption>
+						<figcaption>test (2013)</figcaption>
 					</figure>
 				</a>
 			</div><!--
@@ -60,7 +70,7 @@
 				<a href="#">
 					<figure>
 						<img src="./assets/images/test5.png">
-						<figcaption>Neurite (2012)</figcaption>
+						<figcaption>test (2012)</figcaption>
 					</figure>
 				</a>
 			</div><!--
@@ -68,7 +78,7 @@
 				<a href="#">
 					<figure>
 						<img src="./assets/images/test6.png">
-						<figcaption>Google (2014)</figcaption>
+						<figcaption>test (2014)</figcaption>
 					</figure>
 				</a>
 			</div>
