Added skeleton of the site - image navigation grid for projects and teaching - but without any of the description pages

--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@
 
 	<section class="container body">
 		<div class="single-column">
-				<a href="#">
+				<a href="http://mikewesthad.wordpress.com">
 					<figure>
 						<img src="./assets/images/blog/Blarg.png">
 						<figcaption>Old Blarg</figcaption>
