--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</header>
 
 	<section class="container body">
-			<p>Oh hai, I'm underconstruction.</p>
+		<p>Oh hi, I'm underconstruction.</p>
 	</section>
 
 	<footer class="primary-footer container group">
