--- a/projects.html
+++ b/projects.html
@@ -28,48 +28,96 @@
 			<div class="img-grid-elem">
 				<a href="#">
 					<figure>
-						<img src="./assets/images/test1.png">
-						<figcaption>test (2013)</figcaption>
+						<img src="./assets/images/projects/google/nor.png">
+						<figcaption>Google Normality Project (now)</figcaption>
 					</figure>
 				</a>
 			</div><!--
 			--><div class="img-grid-elem">
 				<a href="#">
 					<figure>
-						<img src="./assets/images/test2.png">
-						<figcaption>test (2013)</figcaption>
+						<img src="./assets/images/projects/edible_materials/mockup_front.png">
+						<figcaption>Edible Materials Food Tent (now)</figcaption>
 					</figure>
 				</a>
 			</div><!--
 			--><div class="img-grid-elem">
 				<a href="#">
 					<figure>
-						<img src="./assets/images/test3.png">
-						<figcaption>test (2013)</figcaption>
+						<img src="./assets/images/projects/blink/trees.png">
+						<figcaption>Blink (2013)</figcaption>
 					</figure>
 				</a>
 			</div><!--
 			--><div class="img-grid-elem">
 				<a href="#">
 					<figure>
-						<img src="./assets/images/test4.png">
-						<figcaption>test (2013)</figcaption>
+						<img src="./assets/images/projects/frame/frame.png">
+						<figcaption>Frame (2013)</figcaption>
 					</figure>
 				</a>
 			</div><!--
 			--><div class="img-grid-elem">
 				<a href="#">
 					<figure>
-						<img src="./assets/images/test5.png">
-						<figcaption>test (2012)</figcaption>
+						<img src="./assets/images/projects/memory_sketches/body.png">
+						<figcaption>Memory Sketches (2013)</figcaption>
 					</figure>
 				</a>
 			</div><!--
 			--><div class="img-grid-elem">
 				<a href="#">
 					<figure>
-						<img src="./assets/images/test6.png">
-						<figcaption>test (2014)</figcaption>
+						<img src="./assets/images/projects/augmented_interface/flood.png">
+						<figcaption>Augmented Interface (2013)</figcaption>
+					</figure>
+				</a>
+			</div><!--
+			--><div class="img-grid-elem">
+				<a href="#">
+					<figure>
+						<img src="./assets/images/projects/video_collapse/shake_15_post.png">
+						<figcaption>Video Collapse (2013)</figcaption>
+					</figure>
+				</a>
+			</div><!--
+			--><div class="img-grid-elem">
+				<a href="#">
+					<figure>
+						<img src="./assets/images/projects/natural_symmetries/169.png">
+						<figcaption>Natural Symmetries (2013)</figcaption>
+					</figure>
+				</a>
+			</div><!--
+			--><div class="img-grid-elem">
+				<a href="#">
+					<figure>
+						<img src="./assets/images/projects/nascent/nascent.png">
+						<figcaption>Nascent (2012)</figcaption>
+					</figure>
+				</a>
+			</div><!--
+			--><div class="img-grid-elem">
+				<a href="#">
+					<figure>
+						<img src="./assets/images/projects/escher/escher.png">
+						<figcaption>Escher (2012)</figcaption>
+					</figure>
+				</a>
+			</div><!--
+			--><div class="img-grid-elem">
+				<a href="#">
+					<figure>
+						<img src="./assets/images/projects/convergence/convergence.png">
+						<figcaption>Convergence (2011)</figcaption>
+					</figure>
+				</a>
+			</div><!--
+			--><div class="img-grid-elem">
+				<a href="#">
+					<figure>
+						<img src="./assets/images/projects/growing_cells/reflective_curves.png">
+						<figcaption>Growing Cells (2010)</figcaption>
 					</figure>
 				</a>
 			</div>
