--- a/teaching.html
+++ b/teaching.html
@@ -29,7 +29,15 @@
 				<a href="#">
 					<figure>
 						<img src="./assets/images/teaching/GameDesign_Test.png">
-						<figcaption>Game Design (2013)</figcaption>
+						<figcaption>Game Design (now)</figcaption>
+					</figure>
+				</a>
+			</div><!--
+			--><div class="img-grid-elem">
+				<a href="#">
+					<figure>
+						<img src="./assets/images/teaching/ofBook_Test.png">
+						<figcaption>Introduction to Graphics (2014)</figcaption>
 					</figure>
 				</a>
 			</div><!--
@@ -38,14 +46,6 @@
 					<figure>
 						<img src="./assets/images/teaching/MeshTutorial_Test.png">
 						<figcaption>Generative Meshes (2013)</figcaption>
-					</figure>
-				</a>
-			</div><!--
-			--><div class="img-grid-elem">
-				<a href="#">
-					<figure>
-						<img src="./assets/images/teaching/ofBook_Test.png">
-						<figcaption>Introduction to Graphics (2013)</figcaption>
 					</figure>
 				</a>
 			</div>
