--- a/me.html
+++ b/me.html
@@ -24,14 +24,7 @@
 	</header>
 
 	<section class="container body">
-		<div class="single-column">
-				<a href="#">
-					<figure>
-						<img src="http://s3-ec.buzzfed.com/static/enhanced/web03/2011/10/20/15/enhanced-buzz-25017-1319140748-3.jpg">
-					</figure>
-				</a>
-			</div>
-		</div>
+		<p>blank blank.</p>
 	</section>
 
 	<footer class="primary-footer container group">
