Stupid me page change

--- a/me.html
+++ b/me.html
@@ -24,7 +24,7 @@
 	</header>
 
 	<section class="container body">
-		<p>blank blank.</p>
+		<p>scientist+artist</p>
 	</section>
 
 	<footer class="primary-footer container group">
