Changed the landing page to be the me page.  Pulled the me text from my old blarg to throw on the new me page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
 	</header>
 
 	<section class="container body">
-		<p>Oh hi, I'm underconstruction.</p>
+		<section class="col-left">
+			<p>Hi! I'm Mike.</p>
+			<p>I studied as a cognitive scientist at Lafayette College. I was a computational neuroscience researcher at UC Berkeley. Now I’m an artist in Art and Technology at SAIC. I’m experimenting with interaction, code, perception and cognition.</p>
+			<p>This site is under construction at the moment.  You can see some thumbnail images of my projects and teaching, but clicking on the images won't take you anywhere yet (though they will shortly).</p>
+		</section><!--
+		--><section class="col-right">
+			<img src="./assets/images/me/mike-hadley.jpg">
+		</section>
 	</section>
 
 	<footer class="primary-footer container group">
@@ -34,7 +41,7 @@
 				<li><small>email:</small> <a href="mailto:mikewesthad@gmail.com">mikewesthad[at]gmail</a></li><!-- 
 				--><li><small>twitter:</small> <a href="http://twitter.com/mikewesthad">@mikewesthad</a></li><!--
 				--><li><small>github:</small> <a href="http://github.com/mikewesthad">mikewesthad</a></li><!--
-				--><li><small>linkedin:</small> <a href="http://www.linkedin.com/in/michaelwesthadley">michael hadley</a></li>
+				--><li><small>linkedin:</small> <a href="http://www.linkedin.com/in/michaelwesthadley">michael west hadley</a></li>
 			</ul>
 		</section>
 	</footer>
