--- a/teaching.html
+++ b/teaching.html
@@ -59,7 +59,7 @@
 				<li><small>email:</small> <a href="mailto:mikewesthad@gmail.com">mikewesthad[at]gmail</a></li><!-- 
 				--><li><small>twitter:</small> <a href="http://twitter.com/mikewesthad">@mikewesthad</a></li><!--
 				--><li><small>github:</small> <a href="http://github.com/mikewesthad">mikewesthad</a></li><!--
-				--><li><small>linkedin:</small> <a href="http://www.linkedin.com/in/michaelwesthadley">michael hadley</a></li>
+				--><li><small>linkedin:</small> <a href="http://www.linkedin.com/in/michaelwesthadley">michael west hadley</a></li>
 			</ul>
 		</section>
 	</footer>
