--- a/me.html
+++ b/me.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>mikewesthad</title>
 	<link rel="stylesheet" href="assets/stylesheets/main.css">
-	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 				<li><a href="projects.html">Projects</a></li><!--
 				--><li><a href="teaching.html">Teaching</a></li><!--
 				--><li><a href ="blog.html">Blog</a></li><!--
-				--><li><a href="me.html">Me</a></li>
+				--><li class="active-nav-item"><a href="me.html">Me</a></li>
 			</ul>
 		</nav>
 	</header>
