--- a/teaching.html
+++ b/teaching.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>mikewesthad</title>
 	<link rel="stylesheet" href="assets/stylesheets/main.css">
-	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
