added movie collapse project page

--- a/projects.html
+++ b/projects.html
@@ -74,7 +74,7 @@
 				</a>
 			</div><!--
 			--><div class="img-grid-elem">
-				<a href="#">
+				<a href="project_video_collapse.html">
 					<figure>
 						<img src="./assets/images/projects/video_collapse/shake_15_post.png">
 						<figcaption>Video Collapse (2013)</figcaption>
