--- a/project_video_collapse.html
+++ b/project_video_collapse.html
@@ -29,10 +29,12 @@
 				<span class="title">Video Collapse (2013)</span>
 				<span class="source-code"><a href="https://github.com/mikewesthad/MovieCollapse">Source Code</a></span>
 			</div>
-			<p>For this project, I treated video as a source of data. I wanted to take a short scene from a video and compress it into a single image, an abstract representation of everything that happened in the video.</p>
-			<p>I wrote custom software in C++ using the openFrameworks library to take a movie, find the shapes that change over time and splash them onto a digital canvas.</p>
-			<p>In the shake series (left column), I used "Shake" by Variable as my source material, which shows a series of dogs twirling their heads, generating a whirlwind of saliva, tongue and fur.</p>
-			<p>In the gravity series (right column), I used a scene from the movie Gravity.  Repeating arcing bands of blues and whites cover the screen, representing the moving edge of Earth.</p>
+			<div class="project-description">
+				<p>For this project, I treated video as a source of data. I wanted to take a short scene from a video and compress it into a single image, an abstract representation of everything that happened in the video.</p>
+				<p>I wrote custom software in C++ using the openFrameworks library to take a movie, find the shapes that change over time and splash them onto a digital canvas.</p>
+				<p>In the shake series (left column), I used "Shake" by Variable as my source material, which shows a series of dogs twirling their heads, generating a whirlwind of saliva, tongue and fur.</p>
+				<p>In the gravity series (right column), I used a scene from the movie Gravity.  Repeating arcing bands of blues and whites cover the screen, representing the moving edge of Earth.</p>
+			</div>
 		</section>
 		<section class="col-1-2 left">
 			<img src="./assets/images/projects/video_collapse/shake_15_post.png">
