Added page for Natural Symmetries

--- a/project_video_collapse.html
+++ b/project_video_collapse.html
@@ -37,16 +37,16 @@
 			</div>
 		</section>
 		<section class="col-1-2 left">
-			<img src="./assets/images/projects/video_collapse/shake_15_post.png">
+			<a href="./assets/images/projects/video_collapse/shake_15_post.png"><img src="./assets/images/projects/video_collapse/shake_15_post.png"></a>
 		</section><!--
 		--><section class="col-1-2 right">
-			<img src="./assets/images/projects/video_collapse/gravity_42_post.png">
+			<a href="./assets/images/projects/video_collapse/gravity_42_post.png"><img src="./assets/images/projects/video_collapse/gravity_42_post.png"></a>
 		</section><!--
 		--><section class="col-1-2 left">
-			<img src="./assets/images/projects/video_collapse/shake_87_post.png">
+			<a href="./assets/images/projects/video_collapse/shake_87_post.png"><img src="./assets/images/projects/video_collapse/shake_87_post.png"></a>
 		</section><!--
 		--><section class="col-1-2 right">
-			<img src="./assets/images/projects/video_collapse/gravity_98_post.png">
+			<a href="./assets/images/projects/video_collapse/gravity_98_post.png"><img src="./assets/images/projects/video_collapse/gravity_98_post.png"></a>
 		</section>
 		<iframe class="col-1-2 left" src="http://player.vimeo.com/video/79719706?portrait=0" width="475" height="267" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><!--
 		--><iframe class="col-1-2 right" src="http://player.vimeo.com/video/79728620?portrait=0" width="475" height="267" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
