--- a/projects.html
+++ b/projects.html
@@ -82,7 +82,7 @@
 				</a>
 			</div><!--
 			--><div class="img-grid-elem">
-				<a href="#">
+				<a href="project_natural_symmetries.html">
 					<figure>
 						<img src="./assets/images/projects/natural_symmetries/169.png">
 						<figcaption>Natural Symmetries (2013)</figcaption>
