Added page for growing cells

--- a/projects.html
+++ b/projects.html
@@ -114,9 +114,9 @@
 				</a>
 			</div><!--
 			--><div class="img-grid-elem">
-				<a href="#">
+				<a href="project_growing_forms.html">
 					<figure>
-						<img src="./assets/images/projects/growing_cells/reflective_curves.png">
+						<img src="./assets/images/projects/growing_cells/reflective_cell.png">
 						<figcaption>Growing Cells (2010)</figcaption>
 					</figure>
 				</a>
