--- a/projects.html
+++ b/projects.html
@@ -114,7 +114,7 @@
 				</a>
 			</div><!--
 			--><div class="img-grid-elem">
-				<a href="project_growing_forms.html">
+				<a href="project_growing_cells.html">
 					<figure>
 						<img src="./assets/images/projects/growing_cells/reflective_cell.png">
 						<figcaption>Growing Cells (2010)</figcaption>
