Added augmented interface page

--- a/projects.html
+++ b/projects.html
@@ -66,9 +66,9 @@
 				</a>
 			</div><!--
 			--><div class="img-grid-elem">
-				<a href="#">
+				<a href="project_augmented_interface.html">
 					<figure>
-						<img src="./assets/images/projects/augmented_interface/flood.png">
+						<img src="./assets/images/projects/augmented_interface/led_one.png">
 						<figcaption>Augmented Interface (2013)</figcaption>
 					</figure>
 				</a>
