Hosting playable version of game on gh pages

--- a/project_augmented_interface.html
+++ b/project_augmented_interface.html
@@ -31,7 +31,7 @@
 			</div>
 			<div class="project-description">
 				<p>This was an experiment in augmented interfaces for game spaces.  In addition to a keyboard and mouse, players also use two physical LEDs as controls in the game space.</p>
-				<p>The video below shows the installation running.  For the purposes of sharing, there is also a version of the game that does not require Arduinos and LEDs below, playable online <a href="dl.dropboxusercontent.com/u/32721130/flood_no_arduino_web/flood_no_arduino_web.html">here</a>.</p>
+				<p>The video below shows the installation running.  For the purposes of sharing, there is also a version of the game that does not require Arduinos and LEDs below, playable online <a href="./assets/unity_web/flood_no_arduino_web/flood_no_arduino_web.html">here</a>.</p>
 			</div>
 		</section>
 		<section class="col-1-2 left">
