--- a/project_augmented_interface.html
+++ b/project_augmented_interface.html
@@ -31,6 +31,7 @@
 			</div>
 			<div class="project-description">
 				<p>This was an experiment in augmented interfaces for game spaces.  In addition to a keyboard and mouse, players also use two physical LEDs as controls in the game space.</p>
+				<p>The game is built using the <a href="http://unity3d.com/">Unity game engine</a>, <a href="http://openframeworks.cc/">openFrameworks C++ toolkit</a> and an <a href="http://www.arduino.cc/">Ardiuno</a> board with two LEDs.<p>
 				<p>The video below shows the installation running.  For the purposes of sharing, there is also a version of the game that does not require Arduinos and LEDs below, playable online <a href="http://dl.dropboxusercontent.com/u/32721130/flood_no_arduino_web/flood_no_arduino_web.html">here</a>.</p>
 			</div>
 		</section>
