Forgot to update the projects page

--- a/projects.html
+++ b/projects.html
@@ -58,7 +58,7 @@
 				</a>
 			</div><!--
 			--><div class="img-grid-elem">
-				<a href="#">
+				<a href="project_memory_sketches.html">
 					<figure>
 						<img src="./assets/images/projects/memory_sketches/body.png">
 						<figcaption>Memory Sketches (2013)</figcaption>
