Added Frame project page

--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
 				</a>
 			</div><!--
 			--><div class="img-grid-elem">
-				<a href="#">
+				<a href="project_frame.html">
 					<figure>
 						<img src="./assets/images/projects/frame/frame.png">
 						<figcaption>Frame (2013)</figcaption>
