Added blink project page

--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
 				</a>
 			</div><!--
 			--><div class="img-grid-elem">
-				<a href="#">
+				<a href="project_blink.html">
 					<figure>
 						<img src="./assets/images/projects/blink/trees.png">
 						<figcaption>Blink (2013)</figcaption>
