--- a/project_blink.html
+++ b/project_blink.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>mikewesthad</title>
-	<link rel="stylesheet" href="assets/stylesheets/main.css">
+	<link rel="stylesheet" href="assets/stylesheets/main.css">	
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic' rel='stylesheet' type='text/css'>
 </head>
 
@@ -30,7 +30,8 @@
 			</div>
 			<div class="project-description">
 				<p>"So you get every illusion of logical connection, but the actual fact is that the thoughts become more and more cockeyed until they’re completely disjointed, and beyond that, you fall asleep." - Richard Feynman, on the breakdown of logic as you fall asleep.</p>  
-				<p>This piece is about putting the viewer into that state of mind.  It is a first person game built with the <a href="http://unity3d.com/">Unity game engine</a>.  It was shown during the 2013 Basement Dwellers show at the School of the Art Institute (installation shot below).  The iMac and trackball mouse sit atop a plinth that is mounted to the wall.  The only control for the player is the movement of the ball of the trackball mouse, which controls what you can see in the game space.</p>
+				<p>This piece is about putting the player into that state of mind.  It is a first person game built with the <a href="http://unity3d.com/">Unity game engine</a>.  The player is put into a body in a forest clearing, but the only "action" available to them is to look around.  In looking, they construct a story to explain what is happening.</p>
+				<p>It was shown during the 2013 Basement Dwellers show at the School of the Art Institute (installation shot below).  The iMac and trackball mouse sit atop a plinth that is mounted to the wall.  The only control for the player is the movement of the ball of the trackball mouse, which controls what you can see in the game space.</p>
 				<p>Downloadable versions for PC and Mac are available from <a href="http://gamejolt.com/games/other/blink/18933/">here</a>.  Moving the mouse allows you to look around.</p>
 			</div>
 		</section>
