--- a/project_blink.html
+++ b/project_blink.html
@@ -32,7 +32,7 @@
 				<p>"So you get every illusion of logical connection, but the actual fact is that the thoughts become more and more cockeyed until they’re completely disjointed, and beyond that, you fall asleep." - Richard Feynman, on the breakdown of logic as you fall asleep.</p>  
 				<p>This piece is about putting the player into that state of mind.  It is a first person game built with the <a href="http://unity3d.com/">Unity game engine</a>.  The player is put into a body in a forest clearing, but the only "action" available to them is to look around.  In looking, they construct a story to explain what is happening.</p>
 				<p>It was shown during the 2013 Basement Dwellers show at the School of the Art Institute (installation shot below).  The iMac and trackball mouse sit atop a plinth that is mounted to the wall.  The only control for the player is the movement of the ball of the trackball mouse, which controls what you can see in the game space.</p>
-				<p>Downloadable versions for PC and Mac are available from <a href="http://gamejolt.com/games/other/blink/18933/">here</a>.  Moving the mouse allows you to look around.</p>
+				<p>Downloadable versions for PC and Mac are available from <a href="http://gamejolt.com/games/other/blink/18933/">here</a>.  Moving the mouse allows you to look around.  Headphones strongly recommended.</p>
 			</div>
 		</section>
 		<section class="col-1-2 left">
