Added Escher and Convergence project pages

--- a/projects.html
+++ b/projects.html
@@ -98,7 +98,7 @@
 				</a>
 			</div><!--
 			--><div class="img-grid-elem">
-				<a href="#">
+				<a href="project_escher.html">
 					<figure>
 						<img src="./assets/images/projects/escher/escher.png">
 						<figcaption>Escher (2012)</figcaption>
@@ -106,7 +106,7 @@
 				</a>
 			</div><!--
 			--><div class="img-grid-elem">
-				<a href="#">
+				<a href="project_convergence.html">
 					<figure>
 						<img src="./assets/images/projects/convergence/convergence.png">
 						<figcaption>Convergence (2011)</figcaption>
