Added the generative meshes tutorial page

--- a/teaching.html
+++ b/teaching.html
@@ -42,9 +42,9 @@
 				</a>
 			</div><!--
 			--><div class="img-grid-elem">
-				<a href="#">
+				<a href="teaching_generative_meshes.html">
 					<figure>
-						<img src="./assets/images/teaching/MeshTutorial_Test.png">
+						<img src="./assets/images/teaching/generative_meshes/mesh.png">
 						<figcaption>Generative Meshes (2013)</figcaption>
 					</figure>
 				</a>
