Added intro to graphics teaching page

--- a/teaching.html
+++ b/teaching.html
@@ -34,9 +34,9 @@
 				</a>
 			</div><!--
 			--><div class="img-grid-elem">
-				<a href="#">
+				<a href="teaching_introduction_to_graphics.html">
 					<figure>
-						<img src="./assets/images/teaching/ofBook_Test.png">
+						<img src="./assets/images/teaching/ofBook/tangents.png">
 						<figcaption>Introduction to Graphics (2014)</figcaption>
 					</figure>
 				</a>
