Added game design teaching page

--- a/teaching.html
+++ b/teaching.html
@@ -26,7 +26,7 @@
 	<section class="container body">
 		<div class="img-grid">
 			<div class="img-grid-elem">
-				<a href="#">
+				<a href="teaching_game_design.html">
 					<figure>
 						<img src="./assets/images/teaching/GameDesign_Test.png">
 						<figcaption>Game Design (now)</figcaption>
