--- a/teaching_game_design.html
+++ b/teaching_game_design.html
@@ -26,20 +26,12 @@
 	<section class="container body">
 		<section class="col-center">
 			<div class="project-header">
-				<span class="title">Introduction to Graphics (now)</span>
+				<span class="title">Game Design (now)</span>
 			</div>
 			<div class="project-description">
-				<p><a href="http://openframeworks.cc/">openFrameworks</a> is an open source C++ toolkit to make creating things with code easier.   ofBook is a community-sourced book covering the expanse of things you can do with openFrameworks: from animation to iOS applications to game design.</p>  
-				<p>I wrote Chapter 4, "Introduction to Graphics."  It is a chapter aimed at beginners who have read the preceding chapters, which cover how to create an openFrameworks application and the basics of C++ programming.  My chapter walks the reader through the world of 2D graphics by creating complex forms from repeated, simple shapes.</p>
-				<p>The completed book will be published (in print and to the web) within a month, but for now, the unformatted version of my chapter can be seen <a href="https://github.com/openframeworks/ofBook/blob/master/04_intro_to_graphics/chapter.md">here</a>.</p>
+				<p>This summer I will be teaching a two week game design camp at the School of the Art Institute's Middle School Camp (ages 11-13).  It is a course that I developed in collaboration with Kayla Lewis that teaches games as a form of creative expression, rather than as simple entertainment.  Students will studying experimental games and will be making their own experimental games in <a href="http://www.stencyl.com/">Stencyl</a> and in HTML5/Javascript.</p>
+				<p>More information to follow soon.</p>
 			</div>
-		</section>
-		<section class="col-1-2 left">
-			<a href="./assets/images/teaching/ofBook/tangents.png"><img src="./assets/images/teaching/ofBook/tangents.png"></a>
-		</section><!--
-		--><section class="col-1-2 right">
-			<a href="./assets/images/teaching/ofBook/rotating.png"><img src="./assets/images/teaching/ofBook/rotating.png"></a>
-		</section>
 	</section>
 
 	<footer class="primary-footer container group">
