Added Google and Edible Materials pages

--- a/index.html
+++ b/index.html
@@ -25,9 +25,14 @@
 
 	<section class="container body">
 		<section class="col-left">
-			<p>Hi! I'm Mike.</p>
-			<p>I studied as a cognitive scientist at Lafayette College. I was a computational neuroscience researcher at UC Berkeley. Now I’m an artist in Art and Technology at SAIC. I’m experimenting with interaction, code, perception and cognition.</p>
-			<p>This site is under construction at the moment.  You can see some thumbnail images of my projects and teaching, but clicking on the images won't take you anywhere yet (though they will shortly).</p>
+			<div class="outer">
+				<div class="inner"> 
+					<div class="element">
+						<p>Hi! I'm Mike.</p>
+						<p>I studied as a cognitive scientist at Lafayette College. I was a computational neuroscience researcher at UC Berkeley. Now I’m an artist in Art and Technology at SAIC. I’m experimenting with interaction, code, perception and cognition.</p>
+					</div>
+				</div>
+			</div>
 		</section><!--
 		--><section class="col-right">
 			<img src="./assets/images/me/mike-hadley.jpg">
