--- a/project_edible_materials.html
+++ b/project_edible_materials.html
@@ -18,24 +18,22 @@
 				<li><a href="projects.html">Projects</a></li><!--
 				--><li><a href="teaching.html">Teaching</a></li><!--
 				--><li><a href ="blog.html">Blog</a></li><!--
-				--><li class="active-nav-item"><a href="me.html">Me</a></li>
+				--><li><a href="me.html">Me</a></li>
 			</ul>
 		</nav>
 	</header>
 
 	<section class="container body">
-		<section class="col-left">
-			<div class="outer">
-				<div class="inner"> 
-					<div class="element">
-						<p>Hi! I'm Mike.</p>
-						<p>I studied as a cognitive scientist at Lafayette College. I was a computational neuroscience researcher at UC Berkeley. Now I’m an artist in Art and Technology at SAIC. I’m experimenting with interaction, code, perception and cognition.</p>
-					</div>
-				</div>
+		<section class="col-center">
+			<div class="project-header">
+				<span class="title">Edible Materials (now)</span>
 			</div>
-		</section><!--
-		--><section class="col-right">
-			<img src="./assets/images/me/mike-hadley.jpg">
+			<div class="project-description">
+				<p>This project, about the failings of nutrition labels, is currently in progress.  It will be installed in the Easton Farmer's Market in PA on July 12th, 2014.  The installation will be a "food" tent.  A simple 3D mockup of the structure of the tent is shown below.  More information to follow shortly.</p>
+			</div>
+		</section>
+		<section class="col-1-2 center">
+			<a href="./assets/images/projects/edible_materials/mockup_front.png"><img src="./assets/images/projects/edible_materials/mockup_front.png"></a>
 		</section>
 	</section>
 
