--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
 	<section class="container body">
 		<div class="img-grid">
 			<div class="img-grid-elem">
-				<a href="#">
+				<a href="project_google.html">
 					<figure>
 						<img src="./assets/images/projects/google/nor.png">
 						<figcaption>Google Normality Project (now)</figcaption>
@@ -34,7 +34,7 @@
 				</a>
 			</div><!--
 			--><div class="img-grid-elem">
-				<a href="#">
+				<a href="project_edible_materials.html">
 					<figure>
 						<img src="./assets/images/projects/edible_materials/mockup_front.png">
 						<figcaption>Edible Materials Food Tent (now)</figcaption>
