Changed google project date

--- a/project_google.html
+++ b/project_google.html
@@ -29,7 +29,7 @@
 				<span class="title">Google (now)</span>
 			</div>
 			<div class="project-description">
-				<p>This project, about insecurities pulled from Google's "autocomplete," is currently in progress.  It will be installed in the 900 N Michigan Ave Bloomingdale's on July 4th, 2014.  More information to follow shortly.</p>
+				<p>This project, about insecurities pulled from Google's "autocomplete," is currently in progress.  It will be installed in the 900 N Michigan Ave Bloomingdale's in August 2014.  More information to follow shortly.</p>
 			</div>
 		</section>
 		<section class="col-1-2 center">
