Added picture frame web version

--- a/project_frame.html
+++ b/project_frame.html
@@ -30,7 +30,7 @@
 			</div>
 			<div class="project-description">
 				<p>Similar to the <a href="project_memory_sketches.html">Memory Sketches</a>, this first person game world is about the elusiveness of memory.</p>  
-				<p>It is built in <a href="http://unity3d.com/">Unity game engine</a>.  A playable version is hosted online <a href="#">(coming soon)</a>.  The W, A, S and D keys control movement, while the mouse controls where you are looking.</p>
+				<p>It is built in <a href="http://unity3d.com/">Unity game engine</a>.  A playable version is hosted online <a href="https://dl.dropboxusercontent.com/u/32721130/Frame_Web_Build/Web%20Build.html">here</a>.  The W, A, S and D keys control movement, while the mouse controls where you are looking.</p>
 			</div>
 		</section>
 		<section class="col-1-2 center">
