Updated google and gratuitous gram pages

--- a/project_google.html
+++ b/project_google.html
@@ -26,15 +26,13 @@
 	<section class="container body">
 		<section class="col-center">
 			<div class="project-header">
-				<span class="title">Google (now)</span>
+				<span class="title">Public Insecurities (now)</span>
 			</div>
 			<div class="project-description">
-				<p>This project, about insecurities pulled from Google's "autocomplete," is currently in progress.  It will be installed in the 900 N Michigan Ave Bloomingdale's in August 2014.  More information to follow shortly.</p>
+				<p>This project is one of a series that deals with insecurities pulled from Google’s search “suggestions,” the search completions that drop down from the search bar as you type.  These suggestions come from private searches, recorded by Google, which are anonymized and re-presented to us.  The ones I am interested in are expressions of collective, private insecurities that can be uncovered by typing a few, charged words into a search bar.</p>
+				<p>Public Insecurities is a single channel video projection that will be installed in the 900 N Michigan Ave Bloomingdale's in Chicago in August 2014.  It will show screen recordings of search suggestions being typed.  The below vimeo video shows an example of a single search.  The final installation will include six searches.</p>
 			</div>
-		</section>
-		<section class="col-1-2 center">
-			<a href="./assets/images/projects/google/nor.png"><img src="./assets/images/projects/google/nor.png"></a>
-		</section>
+		<iframe class="col-1-2 center" src="http://player.vimeo.com/video/99981609?portrait=0" width="475" height="267" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 	</section>
 
 	<footer class="primary-footer container group">
