--- a/projects.html
+++ b/projects.html
@@ -29,15 +29,15 @@
 				<a href="project_google.html">
 					<figure>
 						<img src="./assets/images/projects/google/nor.png">
-						<figcaption>Google Normality Project (now)</figcaption>
+						<figcaption>Public Insecurities (now)</figcaption>
 					</figure>
 				</a>
 			</div><!--
 			--><div class="img-grid-elem">
-				<a href="project_edible_materials.html">
+				<a href="project_gratuitous_gram.html">
 					<figure>
-						<img src="./assets/images/projects/edible_materials/mockup_front.png">
-						<figcaption>Edible Materials Food Tent (now)</figcaption>
+						<img src="./assets/images/projects/gratuitous_gram/cover_picture.jpg">
+						<figcaption>The Gratuitous Gram (2014)</figcaption>
 					</figure>
 				</a>
 			</div><!--
