Updated Google project page

--- a/project_google.html
+++ b/project_google.html
@@ -26,13 +26,20 @@
 	<section class="container body">
 		<section class="col-center">
 			<div class="project-header">
-				<span class="title">Public Insecurities (now)</span>
+				<span class="title">Public Insecurities (2014)</span>
 			</div>
 			<div class="project-description">
-				<p>This project is one of a series that deals with insecurities pulled from Google’s search “suggestions,” the search completions that drop down from the search bar as you type.  These suggestions come from private searches, recorded by Google, which are anonymized and re-presented to us.  The ones I am interested in are expressions of collective, private insecurities that can be uncovered by typing a few, charged words into a search bar.</p>
-				<p>Public Insecurities is a single channel video projection that will be installed in the 900 N Michigan Ave Bloomingdale's in Chicago in August 2014.  It will show screen recordings of search suggestions being typed.  The below vimeo video shows an example of a single search.  The final installation will include six searches.</p>
+				<p>This project is one of a series that deals with insecurities pulled from Google’s search “suggestions” - the search completions that drop down from the search bar as you type.  These suggestions come from private searches, recorded by Google, which are anonymized and re-presented to us.  The ones I am interested in are expressions of collective, private insecurities that can be uncovered by typing a few, charged words into a search bar.</p>
+				<p>Public Insecurities is a single channel video projection that was installed in the 900 N Michigan Ave Bloomingdale's in Chicago from Aug 15th, 2014 to Sept 25th, 2014.  The below video was played on a loop in a secluded space on the top floor of the mall.</p>
+				<p>The project is part of an ongoing research path.</p>
 			</div>
-		<iframe class="col-1-2 center" src="http://player.vimeo.com/video/99981609?portrait=0" width="475" height="267" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+		<section class="col-1-2 left">
+			<a href="./assets/images/projects/google/01_Outside.jpg"><img src="./assets/images/projects/google/01_Outside.jpg"></a>
+		</section><!--
+		--><section class="col-1-2 right">
+			<a href="./assets/images/projects/google/02_Inside.jpg"><img src="./assets/images/projects/google/02_Inside.jpg"></a>
+		</section><!--
+		--><iframe class="col-1-2 center" src="http://player.vimeo.com/video/103603472?portrait=0" width="475" height="267" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 	</section>
 
 	<footer class="primary-footer container group">
