Added food page

--- a/projects.html
+++ b/projects.html
@@ -26,10 +26,26 @@
 	<section class="container body">
 		<div class="img-grid">
 			<div class="img-grid-elem">
+				<a href="project_food.html">
+					<figure>
+						<img src="./assets/images/projects/food/labels.png">
+						<figcaption>Speculative Food (now)</figcaption>
+					</figure>
+				</a>
+			</div><!--
+			--><div class="img-grid-elem">
+				<a href="project_view_history.html">
+					<figure>
+						<img src="./assets/images/projects/view_history/crowd.jpg">
+						<figcaption>[View History] (2014)</figcaption>
+					</figure>
+				</a>
+			</div><!--
+			--><div class="img-grid-elem">
 				<a href="project_google.html">
 					<figure>
 						<img src="./assets/images/projects/google/nor.png">
-						<figcaption>Public Insecurities (now)</figcaption>
+						<figcaption>Public Insecurities (2014)</figcaption>
 					</figure>
 				</a>
 			</div><!--
