Working on the View History page

--- a/project_view_history.html
+++ b/project_view_history.html
@@ -30,9 +30,11 @@
 			</div>
 			<div class="project-description">
 				<p>(page under construction)</p>
-				<p>Collaboration with Sid Benteftifa, Olivia Ching, Meghan Ryan Morris, Steph Shapiro, Julia Torres and Brandon Williams.</p>
-				<p>Installed in LeRoy Neiman Center at the School of the Art Institute of Chicago from Dec 7th, 2014 - Dec 16th, 2014.</p>
-				<p>Upcoming installation at Northwestern University.</p>
+				<p>When we read an article on Wikipedia, we tend to consider the page as a static document rather than a collection of evolving information.  We don’t often read the same article multiple times, looking for how the information has changed since our last visit.  Even though the revision history for an article is publicly available from our browsers, that history is effectively invisible to readers.</p>
+				<p>[View History] reveals the evolution of the "Global warming" Wikipedia article in two ways.</p>
+				<p>On the left, overlaid sheets of acrylic show the chronological development of the content of the article.  The origin of each word has been dated and placed within a stack of acrylic sheets.  The older the word is, the farther back into the stack it is displayed.</p>
+				<p>On the right, three books – “Some people dispute,” “wording choice” and “consensus view” – record the debates and comments among individuals as the “Global warming” article was being written.  “Some people dispute” collects controversial edits surrounding a particularly strongly opinionated individual, “wording choice” examines how language choices reflect biases and “consensus view” looks at how majority and minority views get represented in Wikipedia.</p>
+				<p>[View History] was created in collaboration with Sid Benteftifa, Olivia Ching, Meghan Ryan Morris, Steph Shapiro, Julia Torres and Brandon Williams.  It was installed for the Data Viz Collaborative show at the Leroy Neiman Center at the School of the Art Institute of Chicago from 12/05/2014 to 12/15/2014 and in the sister show in the Ford building at Northwestern University from 01/20/2015 to 02/20/2015.</p>
 			</div>
 		</section>
 		<section class="col-1-2 left">
