added section for render sketches

--- a/projects.html
+++ b/projects.html
@@ -50,6 +50,14 @@
 				</a>
 			</div><!--
 			--><div class="img-grid-elem">
+				<a href="http://www.mikewesthad.com/rendersketchgame/">
+					<figure>
+						<img src="./assets/images/projects/render_sketches/placeboeffectThumbnail.jpg">
+						<figcaption>Render Sketches (2014 - now)</figcaption>
+					</figure>
+				</a>
+			</div><!--
+			--><div class="img-grid-elem">
 				<a href="project_gratuitous_gram.html">
 					<figure>
 						<img src="./assets/images/projects/gratuitous_gram/cover_pictureThumbnail.jpg">
