--- a/project_view_history.html
+++ b/project_view_history.html
@@ -29,40 +29,75 @@
 				<span class="title">[View History] (2014)</span>
 			</div>
 			<div class="project-description">
-				<p>(page under construction)</p>
 				<p>When we read an article on Wikipedia, we tend to consider the page as a static document rather than a collection of evolving information.  We don’t often read the same article multiple times, looking for how the information has changed since our last visit.  Even though the revision history for an article is publicly available from our browsers, that history is effectively invisible to readers.</p>
-				<p>[View History] reveals the evolution of the "Global warming" Wikipedia article in two ways.</p>
-				<p>On the left, overlaid sheets of acrylic show the chronological development of the content of the article.  The origin of each word has been dated and placed within a stack of acrylic sheets.  The older the word is, the farther back into the stack it is displayed.</p>
-				<p>On the right, three books – “Some people dispute,” “wording choice” and “consensus view” – record the debates and comments among individuals as the “Global warming” article was being written.  “Some people dispute” collects controversial edits surrounding a particularly strongly opinionated individual, “wording choice” examines how language choices reflect biases and “consensus view” looks at how majority and minority views get represented in Wikipedia.</p>
-				<p>[View History] was created in collaboration with Sid Benteftifa, Olivia Ching, Meghan Ryan Morris, Steph Shapiro, Julia Torres and Brandon Williams.  It was installed for the Data Viz Collaborative show at the Leroy Neiman Center at the School of the Art Institute of Chicago from 12/05/2014 to 12/15/2014 and in the sister show in the Ford building at Northwestern University from 01/20/2015 to 02/20/2015.</p>
+				<p>[View History] reveals the evolution of the "Global warming" Wikipedia article in two ways: through the chronology of changes to the article and through the discussions between editors.</p>
 			</div>
-		</section>
-		<section class="col-1-2 left">
-			<a href="./assets/images/projects/view_history/crowd.jpg"><img src="./assets/images/projects/view_history/crowdThumbnail.jpg"></a>
-		</section><!--
-		--><section class="col-1-2 right">
-			<a href="./assets/images/projects/view_history/group.jpg"><img src="./assets/images/projects/view_history/groupThumbnail.jpg"></a>
-		</section><!--
-		--><section class="col-1-2 left">
-			<a href="./assets/images/projects/view_history/onePerson.jpg"><img src="./assets/images/projects/view_history/onePersonThumbnail.jpg"></a>
-		</section><!--
-		--><section class="col-1-2 right">
-			<a href="./assets/images/projects/view_history/twoPeople.jpg"><img src="./assets/images/projects/view_history/twoPeopleThumbnail.jpg"></a>
-		</section><!--
-		--><section class="col-1-2 left">
-			<a href="./assets/images/projects/view_history/time.jpg"><img src="./assets/images/projects/view_history/timeThumbnail.jpg"></a>
-		</section><!--
-		--><section class="col-1-2 right">
-			<a href="./assets/images/projects/view_history/bookClose.jpg"><img src="./assets/images/projects/view_history/bookCloseThumbnail.jpg"></a>
-		</section><!--
-		--><section class="col-1-2 left">
-			<a href="./assets/images/projects/view_history/bookShelf.jpg"><img src="./assets/images/projects/view_history/bookShelfThumbnail.jpg"></a>
-		</section><!--
-		--><section class="col-1-2 right">
-			<a href="./assets/images/projects/view_history/book.jpg"><img src="./assets/images/projects/view_history/bookThumbnail.jpg"></a>
-		</section><!--
-		--><section class="col-1-2 center">
-			<a href="./assets/images/projects/view_history/sidewalkOutside.jpg"><img src="./assets/images/projects/view_history/sidewalkOutsideThumbnail.jpg"></a>
+			<section class="col-1-2 left">
+				<a href="./assets/images/projects/view_history/SAICCrowd1.jpg"><img src="./assets/images/projects/view_history/SAICCrowd1Thumbnail.jpg"></a>
+			</section><!--
+			--><section class="col-1-2 right">
+				<a href="./assets/images/projects/view_history/SAICCrowd2.jpg"><img src="./assets/images/projects/view_history/SAICCrowd2CroppedThumbnail.jpg"></a>
+			</section><!--
+			--><section class="col-1-2 left">
+				<a href="./assets/images/projects/view_history/SAICGroupShot.jpg"><img src="./assets/images/projects/view_history/SAICGroupShotCroppedThumbnail.jpg"></a>
+			</section><!--
+			--><section class="col-1-2 right">
+				<a href="./assets/images/projects/view_history/SAICCleanShot.jpg"><img src="./assets/images/projects/view_history/SAICCleanShotCroppedThumbnail.jpg"></a>
+			</section>
+			<div class="continued-project-description">
+				<p>On the left, overlaid sheets of acrylic show the chronological development of the content of the “Global warming” article from 2007 to 2014. The introductory paragraph and the table of contents were analyzed, and the origin of each word was dated.  Each word was then placed into a stack of acrylic sheets.  Each sheet represented one year, and the older the word was, the farther back into the stack it was placed.</p>
+			</div>
+			<section class="col-1-2 left">
+				<a href="./assets/images/projects/view_history/ChronologySideView.jpg"><img src="./assets/images/projects/view_history/ChronologySideViewCroppedThumbnail.jpg"></a>
+			</section><!--
+			--><section class="col-1-2 right">
+				<a href="./assets/images/projects/view_history/ChronologyParagraph.jpg"><img src="./assets/images/projects/view_history/ChronologyParagraphCroppedThumbnail.jpg"></a>
+			</section><!--
+			--><section class="col-1-2 left">
+				<a href="./assets/images/projects/view_history/ChronologyCloseupParagraph.jpg"><img src="./assets/images/projects/view_history/ChronologyCloseupParagraphCroppedThumbnail.jpg"></a>
+			</section><!--
+			--><section class="col-1-2 right">
+				<a href="./assets/images/projects/view_history/ChronologyCloseUpContents.jpg"><img src="./assets/images/projects/view_history/ChronologyCloseUpContentsCroppedThumbnail.jpg"></a>
+			</section>
+			<div class="continued-project-description">
+				<p>In the center, three books – “Some people dispute,” “wording choice” and “consensus view” – record the debates and comments among individuals as the “Global warming” article was being written. “Some people dispute” collects controversial edits surrounding a particularly strongly opinionated individual, “wording choice” examines how language choices reflect biases and “consensus view” looks at how majority and minority views get represented in Wikipedia.</p>
+			</div>
+			<section class="col-1-2 left">
+				<a href="./assets/images/projects/view_history/SAICCloseCrowd.jpg"><img src="./assets/images/projects/view_history/SAICCloseCrowdCroppedThumbnail.jpg"></a>
+			</section><!--
+			--><section class="col-1-2 right">
+				<a href="./assets/images/projects/view_history/MeShelf.jpg"><img src="./assets/images/projects/view_history/MeShelfCroppedThumbnail.jpg"></a>
+			</section><!--
+			--><section class="col-1-2 left">
+				<a href="./assets/images/projects/view_history/SomePeopleDisputeExample.jpg"><img src="./assets/images/projects/view_history/SomePeopleDisputeExampleCroppedThumbnail.jpg"></a>
+			</section><!--
+			--><section class="col-1-2 right">
+				<a href="./assets/images/projects/view_history/SomePeopleDisputePreface.jpg"><img src="./assets/images/projects/view_history/SomePeopleDisputePrefaceCroppedThumbnail.jpg"></a>
+			</section><!--
+			--><section class="col-1-2 center">
+				<a href="./assets/images/projects/view_history/Books.jpg"><img src="./assets/images/projects/view_history/BooksCroppedThumbnail.jpg"></a>
+			</section>
+			<div class="continued-project-description">
+				<p>On the right, the three books fit into place on top of the text of the Wikipedia article, pulled from the “Discourse about global warming” section.  The covers and titles of the books are excerpts from this section of the article.</p>
+			</div>
+			<section class="col-1-2 left">
+				<a href="./assets/images/projects/view_history/GettingBookFromHolder.jpg"><img src="./assets/images/projects/view_history/GettingBookFromHolderCroppedThumbnail.jpg"></a>
+			</section><!--
+			--><section class="col-1-2 right">
+				<a href="./assets/images/projects/view_history/BooksInHolders.jpg"><img src="./assets/images/projects/view_history/BooksInHoldersCloseUpCroppedThumbnail.jpg"></a>
+			</section><!--
+			--><section class="col-1-2 left">
+				<a href="./assets/images/projects/view_history/BooksInHoldersCloseUp.jpg"><img src="./assets/images/projects/view_history/BooksInHoldersCloseUpCroppedThumbnail.jpg"></a>
+			</section><!--
+			--><section class="col-1-2 right">
+				<a href="./assets/images/projects/view_history/WordingChoiceCloseUp.jpg"><img src="./assets/images/projects/view_history/WordingChoiceCloseUpCroppedThumbnail.jpg"></a>
+			</section>
+			<div class="continued-project-description">
+				<p>[View History] was created in collaboration with Sid Benteftifa, Olivia Ching, Meghan Ryan Morris, Steph Shapiro, Julia Torres and Brandon Williams. It was installed for the Data Viz Collaborative show at the Leroy Neiman Center at the School of the Art Institute of Chicago from 12/05/2014 to 12/15/2014 and in the sister show in the Ford building at Northwestern University from 01/20/2015 to 02/20/2015.</p>
+			</div>
+			<section class="col-1-2 center">
+				<a href="./assets/images/projects/view_history/SAICOutsideShot.jpg"><img src="./assets/images/projects/view_history/SAICOutsideShotCroppedThumbnail.jpg"></a>
+			</section>
 		</section>
 	</section>
 
